// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`strict options > {'noPackageJsonBrowser': 'error'}} 1`] = `
{
  "alwaysPackageJsonFiles": "error",
  "alwaysPackageJsonTypes": "error",
  "noCheckTypes": "warn",
  "noImplicitBrowsersList": "warn",
  "noImplicitSideEffects": "warn",
  "noPackageJsonBrowser": "error",
  "noPackageJsonTypesVersions": "warn",
  "noPackageJsonTypings": "error",
  "noPublishConfigExports": "warn",
  "preferModuleType": "warn",
}
`;

exports[`strict options > {'noPackageJsonBrowser': 'off'}} 1`] = `
{
  "alwaysPackageJsonFiles": "error",
  "alwaysPackageJsonTypes": "error",
  "noCheckTypes": "warn",
  "noImplicitBrowsersList": "warn",
  "noImplicitSideEffects": "warn",
  "noPackageJsonBrowser": "off",
  "noPackageJsonTypesVersions": "warn",
  "noPackageJsonTypings": "error",
  "noPublishConfigExports": "warn",
  "preferModuleType": "warn",
}
`;

exports[`strict options > {'noPackageJsonBrowser': 'warn'}} 1`] = `
{
  "alwaysPackageJsonFiles": "error",
  "alwaysPackageJsonTypes": "error",
  "noCheckTypes": "warn",
  "noImplicitBrowsersList": "warn",
  "noImplicitSideEffects": "warn",
  "noPackageJsonBrowser": "warn",
  "noPackageJsonTypesVersions": "warn",
  "noPackageJsonTypings": "error",
  "noPublishConfigExports": "warn",
  "preferModuleType": "warn",
}
`;

exports[`strict options > {'noPackageJsonTypesVersions': 'error'}} 1`] = `
{
  "alwaysPackageJsonFiles": "error",
  "alwaysPackageJsonTypes": "error",
  "noCheckTypes": "warn",
  "noImplicitBrowsersList": "warn",
  "noImplicitSideEffects": "warn",
  "noPackageJsonBrowser": "warn",
  "noPackageJsonTypesVersions": "error",
  "noPackageJsonTypings": "error",
  "noPublishConfigExports": "warn",
  "preferModuleType": "warn",
}
`;

exports[`strict options > {'noPackageJsonTypesVersions': 'off'}} 1`] = `
{
  "alwaysPackageJsonFiles": "error",
  "alwaysPackageJsonTypes": "error",
  "noCheckTypes": "warn",
  "noImplicitBrowsersList": "warn",
  "noImplicitSideEffects": "warn",
  "noPackageJsonBrowser": "warn",
  "noPackageJsonTypesVersions": "off",
  "noPackageJsonTypings": "error",
  "noPublishConfigExports": "warn",
  "preferModuleType": "warn",
}
`;

exports[`strict options > {'noPackageJsonTypesVersions': 'warn'}} 1`] = `
{
  "alwaysPackageJsonFiles": "error",
  "alwaysPackageJsonTypes": "error",
  "noCheckTypes": "warn",
  "noImplicitBrowsersList": "warn",
  "noImplicitSideEffects": "warn",
  "noPackageJsonBrowser": "warn",
  "noPackageJsonTypesVersions": "warn",
  "noPackageJsonTypings": "error",
  "noPublishConfigExports": "warn",
  "preferModuleType": "warn",
}
`;

exports[`strict options > {'noPackageJsonTypings': 'error'}} 1`] = `
{
  "alwaysPackageJsonFiles": "error",
  "alwaysPackageJsonTypes": "error",
  "noCheckTypes": "warn",
  "noImplicitBrowsersList": "warn",
  "noImplicitSideEffects": "warn",
  "noPackageJsonBrowser": "warn",
  "noPackageJsonTypesVersions": "warn",
  "noPackageJsonTypings": "error",
  "noPublishConfigExports": "warn",
  "preferModuleType": "warn",
}
`;

exports[`strict options > {'noPackageJsonTypings': 'off'}} 1`] = `
{
  "alwaysPackageJsonFiles": "error",
  "alwaysPackageJsonTypes": "error",
  "noCheckTypes": "warn",
  "noImplicitBrowsersList": "warn",
  "noImplicitSideEffects": "warn",
  "noPackageJsonBrowser": "warn",
  "noPackageJsonTypesVersions": "warn",
  "noPackageJsonTypings": "off",
  "noPublishConfigExports": "warn",
  "preferModuleType": "warn",
}
`;

exports[`strict options > {'noPackageJsonTypings': 'warn'}} 1`] = `
{
  "alwaysPackageJsonFiles": "error",
  "alwaysPackageJsonTypes": "error",
  "noCheckTypes": "warn",
  "noImplicitBrowsersList": "warn",
  "noImplicitSideEffects": "warn",
  "noPackageJsonBrowser": "warn",
  "noPackageJsonTypesVersions": "warn",
  "noPackageJsonTypings": "warn",
  "noPublishConfigExports": "warn",
  "preferModuleType": "warn",
}
`;

exports[`strict options > {'noPackageJsonTypings': false}} 1`] = `
[ZodError: [
  {
    "code": "invalid_union",
    "unionErrors": [
      {
        "issues": [
          {
            "received": false,
            "code": "invalid_literal",
            "expected": "error",
            "path": [
              "strictOptions",
              "noPackageJsonTypings"
            ],
            "message": "Validation error: Invalid literal value, expected \\"error\\" at \\"strictOptions.noPackageJsonTypings\\""
          }
        ],
        "name": "ZodError"
      },
      {
        "issues": [
          {
            "received": false,
            "code": "invalid_literal",
            "expected": "warn",
            "path": [
              "strictOptions",
              "noPackageJsonTypings"
            ],
            "message": "Validation error: Invalid literal value, expected \\"warn\\" at \\"strictOptions.noPackageJsonTypings\\""
          }
        ],
        "name": "ZodError"
      },
      {
        "issues": [
          {
            "received": false,
            "code": "invalid_literal",
            "expected": "off",
            "path": [
              "strictOptions",
              "noPackageJsonTypings"
            ],
            "message": "Validation error: Invalid literal value, expected \\"off\\" at \\"strictOptions.noPackageJsonTypings\\""
          }
        ],
        "name": "ZodError"
      }
    ],
    "path": [
      "strictOptions",
      "noPackageJsonTypings"
    ],
    "message": "Validation error: Validation error: Invalid literal value, expected \\"error\\" at \\"strictOptions.noPackageJsonTypings\\" at \\"strictOptions.noPackageJsonTypings\\", or Validation error: Invalid literal value, expected \\"warn\\" at \\"strictOptions.noPackageJsonTypings\\" at \\"strictOptions.noPackageJsonTypings\\", or Validation error: Invalid literal value, expected \\"off\\" at \\"strictOptions.noPackageJsonTypings\\" at \\"strictOptions.noPackageJsonTypings\\""
  }
]]
`;

exports[`strict options > {'noPackageJsonTypings': true}} 1`] = `
[ZodError: [
  {
    "code": "invalid_union",
    "unionErrors": [
      {
        "issues": [
          {
            "received": true,
            "code": "invalid_literal",
            "expected": "error",
            "path": [
              "strictOptions",
              "noPackageJsonTypings"
            ],
            "message": "Validation error: Invalid literal value, expected \\"error\\" at \\"strictOptions.noPackageJsonTypings\\""
          }
        ],
        "name": "ZodError"
      },
      {
        "issues": [
          {
            "received": true,
            "code": "invalid_literal",
            "expected": "warn",
            "path": [
              "strictOptions",
              "noPackageJsonTypings"
            ],
            "message": "Validation error: Invalid literal value, expected \\"warn\\" at \\"strictOptions.noPackageJsonTypings\\""
          }
        ],
        "name": "ZodError"
      },
      {
        "issues": [
          {
            "received": true,
            "code": "invalid_literal",
            "expected": "off",
            "path": [
              "strictOptions",
              "noPackageJsonTypings"
            ],
            "message": "Validation error: Invalid literal value, expected \\"off\\" at \\"strictOptions.noPackageJsonTypings\\""
          }
        ],
        "name": "ZodError"
      }
    ],
    "path": [
      "strictOptions",
      "noPackageJsonTypings"
    ],
    "message": "Validation error: Validation error: Invalid literal value, expected \\"error\\" at \\"strictOptions.noPackageJsonTypings\\" at \\"strictOptions.noPackageJsonTypings\\", or Validation error: Invalid literal value, expected \\"warn\\" at \\"strictOptions.noPackageJsonTypings\\" at \\"strictOptions.noPackageJsonTypings\\", or Validation error: Invalid literal value, expected \\"off\\" at \\"strictOptions.noPackageJsonTypings\\" at \\"strictOptions.noPackageJsonTypings\\""
  }
]]
`;

exports[`strict options > {'preferModuleType': 'error'}} 1`] = `
{
  "alwaysPackageJsonFiles": "error",
  "alwaysPackageJsonTypes": "error",
  "noCheckTypes": "warn",
  "noImplicitBrowsersList": "warn",
  "noImplicitSideEffects": "warn",
  "noPackageJsonBrowser": "warn",
  "noPackageJsonTypesVersions": "warn",
  "noPackageJsonTypings": "error",
  "noPublishConfigExports": "warn",
  "preferModuleType": "error",
}
`;

exports[`strict options > {'preferModuleType': 'off'}} 1`] = `
{
  "alwaysPackageJsonFiles": "error",
  "alwaysPackageJsonTypes": "error",
  "noCheckTypes": "warn",
  "noImplicitBrowsersList": "warn",
  "noImplicitSideEffects": "warn",
  "noPackageJsonBrowser": "warn",
  "noPackageJsonTypesVersions": "warn",
  "noPackageJsonTypings": "error",
  "noPublishConfigExports": "warn",
  "preferModuleType": "off",
}
`;

exports[`strict options > {'preferModuleType': 'warn'}} 1`] = `
{
  "alwaysPackageJsonFiles": "error",
  "alwaysPackageJsonTypes": "error",
  "noCheckTypes": "warn",
  "noImplicitBrowsersList": "warn",
  "noImplicitSideEffects": "warn",
  "noPackageJsonBrowser": "warn",
  "noPackageJsonTypesVersions": "warn",
  "noPackageJsonTypings": "error",
  "noPublishConfigExports": "warn",
  "preferModuleType": "warn",
}
`;
